fix menu dark hero on mobile

--- a/drupal/sites/all/themes/antistatique/assets/sass/components/navbar.scss
+++ b/drupal/sites/all/themes/antistatique/assets/sass/components/navbar.scss
@@ -145,6 +145,14 @@ category: Components - Navbar
     padding: 11px 0 0 4px;
     font-size: 17px;
   }
+  .dark-hero & {
+     > .navbar-toggle {
+      color: $white;
+    }
+    .icon-bar {
+      background: $white;
+    }
+  }
 }
 
 .navbar-collapse.navbar-mobile {
